--- a/themes/kiddochan/_config.yml
+++ b/themes/kiddochan/_config.yml
@@ -3,6 +3,7 @@ menu:
   Home: /
   Archives: /archives
   About: /about
+  Resume: /resume
 ## you can create `tags` and `categories` folders in `../source`.
 ## And create a `index.md` file in each of them.
 ## set `front-matter`as
